--- a/Client/package.json
+++ b/Client/package.json
@@ -14,11 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "element-ui": "^2.7.2",
     "qs": "^6.7.0",
+    "style-loader": "^1.0.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-lazyload": "^1.3.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
@@ -51,7 +53,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
