--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "element-ui": "^2.7.2",
+    "lodash-webpack-plugin": "^0.11.5",
     "qs": "^6.7.0",
     "style-loader": "^1.0.0",
     "vue": "^2.5.2",
@@ -81,7 +82,7 @@
     "vue-template-compiler": "^2.5.2",
     "wangeditor": "^3.1.1",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
