--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "element-ui": "^2.7.2",
+    "lib-flexible": "^0.3.2",
     "lodash-webpack-plugin": "^0.11.5",
     "qs": "^6.7.0",
     "style-loader": "^1.0.0",
@@ -69,6 +70,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "qs": "^6.7.0",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
