--- a/Client/package.json
+++ b/Client/package.json
@@ -16,15 +16,18 @@
   "dependencies": {
     "axios": "^0.18.1",
     "element-ui": "^2.7.2",
+    "giao-ui": "^0.1.0",
     "lib-flexible": "^0.3.2",
     "lodash-webpack-plugin": "^0.11.5",
+    "prerender-spa-plugin": "^3.4.0",
     "qs": "^6.7.0",
     "style-loader": "^1.0.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-lazyload": "^1.3.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "whatui": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -43,6 +46,7 @@
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
